--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -33,7 +33,7 @@
 
 
           <div id="collapsable-nav" class="collapse navbar-collapse">
-            <ul id="nav-list" class="nav navbar-nav visible-xs">
+            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
 
                <li class="text-center"><a href="#">Chicken</a></li>
 
