--- a/MODULE-3-SOLUTION/index.html
+++ b/MODULE-3-SOLUTION/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Food, LLC</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
 </head>
 
@@ -16,19 +16,18 @@
   <header>
   	<nav id="header-nav" class="navbar navbar-default">
   	   <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+               <h1>Food, LLC</h1>
+            </a>
+
   	      <div class="navbar-header">
 
-
-
-             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>          
             </button>
-               <a class="navbar-brand">
-                  <h1>Food, LLC</h1>
-               </a>
           </div>
 
 
@@ -132,8 +131,8 @@ it up to giant size. If you want an effective board, keep it small.</p>
 
 
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/script.js"></script>
+<script src="bootstrap-3.3.7-dist/js/jquery-2.1.4.min.js/"></script>
+<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="bootstrap-3.3.7-dist/js/script.js"></script>
 </body>
 </html>
